# src/main/java/team/hotpotato/domain/member/api/dto/RegisterResponse.java
@@ -3,6 +3,8 @@ package team.hotpotato.domain.member.api.dto;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 public record RegisterResponse(
-        @JsonProperty("indexing_job_id") String indexingJobId
+        @JsonProperty("indexing_job_id") String indexingJobId,
+        String accessToken,
+        String refreshToken
 ) {
 }
